--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,6 +5,8 @@ api-version: 1.17
 depend: [ Core ]
 authors: [ Iban ]
 description: Bungeecord home plugin
+softdepend:
+  - LuckPerms
 
 commands:
   bhome:
@@ -18,6 +20,7 @@ commands:
   bhomes:
     aliases:
       - homes
+  addmaxhomes:
   bsethome:
     permission: bungeehomes.sethome
     aliases:
