added bonus homes

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -21,6 +21,7 @@ commands:
     aliases:
       - homes
   addmaxhomes:
+  addmaxbonushomes:
   bsethome:
     permission: bungeehomes.sethome
     aliases:
